added db and connection

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tech-blog",
   "version": "1.0.0",
   "description": "Module 14 Coding Bootcamp Challenge: MVC",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node.server.js"
@@ -17,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/smalone9/tech-blog/issues"
   },
-  "homepage": "https://github.com/smalone9/tech-blog#readme"
+  "homepage": "https://github.com/smalone9/tech-blog#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.5"
+  }
 }
